<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">PillBox</string>
    <string name="add_medication_activity_title">Add Medication</string>
    <string name="medication_name_title">Medication Name</string>
    <string name="medication_name_hint">Type active ingredient/brand name</string>
    <string name="button_text">Done</string>
    <string name="reminder_times_title">Reminder Times</string>
    <string name="no_reminders_text">Take as needed</string>
    <string name="time_picker_dialog_title">Set Time and Quantity</string>
    <string name="time_picker_dialog_subtext">Set quantity (number of doses) to be taken at this hour</string>
    <string name="dialog_time_picker_positive_button">Set</string>
    <string name="dialog_time_picker_negative_button">Cancel</string>
    <string name="selectedDoseString">Take <xliff:g id="doseQty">%.2f</xliff:g></string>
    <string name="selectedDoseStringInt">Take <xliff:g id="doseQtyInt">%d</xliff:g></string>
    <string name="medication_message_title">Instructions</string>
    <string name="medication_message_subtitle">Food Instructions</string>
    <string name="before_food_instruction">before food</string>
    <string name="after_food_instruction">after food</string>
    <string name="with_food_instruction">with food</string>
    <string name="no_food_instructions">No food Instructions</string>
    <string name="medication_free_instructions_hint">Free text instructions</string>
    <string name="medication_shape_and_colour_title"><![CDATA[Shape & Colour]]></string>
    <string name="medication_shape_title">Select shape</string>
    <string name="alert_dialog_medication_name_invalid_msg">Please enter valid medication name!</string>
    <string name="add_medication_quit_dialog_text">You have unsaved changes! Are you sure you
        want to quit?</string>
    <string name="dialog_add_medication_quit_positive_button">Quit</string>
    <string name="medicine_saved_success">New Medicine Saved</string>
    <string name="upcoming_medicines_text">Upcoming medicines for the day :</string>
    <string name="details_activity_title">Details</string>
    <string name="details_instructions_title">Instructions :</string>
    <string name="details_frequency_text">Taken <xliff:g id="freq">%d</xliff:g> times a day</string>
    <string name="details_frequency_text_one">Taken once a day</string>
    <string name="delete_medicine_toast">Medicine Deleted</string>
    <string name="delete_medicine_alert_dialog">All reminders of this medicine will be deleted. Continue?</string>
    <string name="delete_medicine_alert_dialog_positive_button">Yes</string>
    <string name="details_upcoming_title">Upcoming reminders :</string>
    <string name="details_instructions_starting_text">Take</string>
    <string name="default_selected_dosage_value">Take 1</string>
    <string name="empty_recycler_view_text">No medicines for today!</string>
    <string name="no_specific_instructions">No specific instructions</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="medication_period_title">Medication Period</string>
    <string name="one_day_period_string">1 day</string>
    <string name="one_week_period_string">1 week</string>
    <string name="one_month_period_string">1 month</string>
    <string name="three_months_period_string">3 months</string>
    <string name="no_medicines_cd">No medicines for today. Click Add Medicine Button to add a medicine</string>
    <string name="add_medicine_cd">Add medicine button</string>
    <string name="quit_cd">Quit adding medicine button</string>
    <string name="save_medicine_cd">Save Medicine button</string>
    <string name="medicine_name_cd">Enter Medicine Name</string>
    <string name="reminder_times_cd">Select reminder times</string>
    <string name="medicine_period_cd">Select Medicine period</string>
    <string name="medicine_message_cd">Enter medicine message</string>
    <string name="free_message_cd">Enter general description about medicine</string>
    <string name="delete_medicine_button_cd">Delete medicine button</string>
    <string name="back_button_cd">Back button</string>
    <string name="dialog_time_picker_negative_button_cd">Close dialog</string>
    <string name="dialog_time_picker_positive_button_cd">Set Time And dosage</string>
    <string name="plus_cd">plus point two five</string>
    <string name="minus_cd">minus point two five</string>
    <string name="dosage_cd">Enter dosage value</string>
    <string name="pill_shape_cd">Select medicine shape</string>
    <string name="pill_color_cd">Select medicine color</string>

    <string-array name="reminder_times_array">
        <item>Once a day</item>
        <item>Twice a day</item>
        <item>3 times a day</item>
        <item>4 times a day</item>
        <item>5 times a day</item>
        <item>6 times a day</item>
        <item>7 times a day</item>
    </string-array>
</resources>
