<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/add_medication_activity_title">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_200"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/medication_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/medication_name_title"
                        style="@style/CardViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/medication_name_title"/>

                    <EditText
                        android:id="@+id/medication_name_edittext"
                        style="@style/CardViewEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/medication_name_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textNoSuggestions"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/medication_reminder_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/reminder_times_title"
                        style="@style/CardViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/reminder_times_title"/>

                    <Switch
                        android:id="@+id/reminder_times_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:checked="true"/>

                    <TextView
                        android:id="@+id/no_reminders_text"
                        style="@style/CardViewSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/reminder_times_title"
                        android:text="@string/no_reminders_text"
                        android:visibility="gone"/>

                    <Spinner
                        android:id="@+id/reminder_times_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/reminder_times_title"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:entries="@array/reminder_times_array"
                        android:spinnerMode="dialog"/>

                    <LinearLayout
                        android:id="@+id/time_selector_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/reminder_times_spinner"
                        android:onClick="showMedicineTimePickerDialog"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp">

                        <TextView
                            android:id="@+id/selectedTime_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="11:01 AM"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="?colorPrimary"/>

                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/selectedDose_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="Take 1"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?colorPrimary"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/time_selector_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/time_selector_1"
                        android:onClick="showMedicineTimePickerDialog"
                        android:paddingBottom="8dp"
                        android:visibility="gone"
                        android:paddingTop="8dp">

                        <TextView
                            android:id="@+id/selectedTime_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="11:01 AM"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="?colorPrimary"/>

                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/selectedDose_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="Take 1"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?colorPrimary"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/time_selector_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/time_selector_2"
                        android:onClick="showMedicineTimePickerDialog"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/selectedTime_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="11:01 AM"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="?colorPrimary"/>

                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/selectedDose_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="Take 1"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?colorPrimary"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/time_selector_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/time_selector_3"
                        android:onClick="showMedicineTimePickerDialog"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/selectedTime_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="11:01 AM"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="?colorPrimary"/>

                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/selectedDose_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="Take 1"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?colorPrimary"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/time_selector_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/time_selector_4"
                        android:onClick="showMedicineTimePickerDialog"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/selectedTime_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="11:01 AM"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="?colorPrimary"/>

                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/selectedDose_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="Take 1"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?colorPrimary"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/time_selector_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/time_selector_5"
                        android:onClick="showMedicineTimePickerDialog"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/selectedTime_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="11:01 AM"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="?colorPrimary"/>

                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/selectedDose_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="Take 1"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?colorPrimary"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/time_selector_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/time_selector_6"
                        android:onClick="showMedicineTimePickerDialog"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/selectedTime_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="11:01 AM"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="?colorPrimary"/>

                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/selectedDose_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="Take 1"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?colorPrimary"/>
                    </LinearLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:backgroundTint="@color/accent_custom"
                android:text="@string/button_text"
                android:textColor="@color/white"
                android:visibility="gone"/>

        </LinearLayout>


    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
